--- a/style2.css
+++ b/style2.css
@@ -7,55 +7,49 @@
 
 .header {
   width: 100%;
-  height: 120px;
+  height: 550px;
   background-color: red;
 }
 
 .header-top {
   width: 100%;
-  height: 70px;
-  background-color: hotpink;
+  height: 50px;
+  background-color: red;
 }
 
 .header-bottom {
   width: 100%;
-  height: 50px;
-  background-color: pink;
-}
-
-.main-visual {
-  width: 100%;
-  height: 300px;
+  height: 500px;
   background-color: orange;
 }
 
-.main-visual-content {
-  width: 350px;
-  height: 300px;
-  background-color: gold;
-}
-
 .main {
-  width: 840px;
+  width: 960px;
   display: flex;
   justify-content: center;
   margin: 0 auto;
 }
 
-.blog {
-  width: 600px;
+.main-center {
+  width: 500px;
+  height: 1400px;
+  background-color: green;
+}
+
+.sidebar-left {
+  width: 230px;
   height: 1400px;
   background-color: limegreen;
 }
 
-.sidebar {
-  width: 240px;
+.sidebar-right {
+  width: 230px;
   height: 1400px;
-  background-color: palegreen;
+  background-color: limegreen;
 }
 
 .footer {
   width: 100%;
-  height: 120px;
+  height: 100px;
   background-color: blue;
 }
