--- a/style7.css
+++ b/style7.css
@@ -66,3 +66,19 @@ footer {
   background-color: #aaa;
 }
 
+@media screen and (max-width:768px) {
+  header {
+    width: 100%;
+    height: 50px;
+  }
+  
+  main {
+    width: 100%;
+    display: block;
+    padding-bottom: 20px;
+  }
+  
+  .step-box:last-child {
+    margin-bottom: 50px;
+  }
+}
