--- a/style7.css
+++ b/style7.css
@@ -24,10 +24,6 @@ main {
   background-color: #eee;
 }
 
-.step-box:last-child {
-  margin-right: 0;
-}
-
 .step-img1 {
   height: 150px;
   background-image: url(img/flow01.png);
@@ -67,18 +63,41 @@ footer {
 }
 
 @media screen and (max-width:768px) {
+  
   header {
-    width: 100%;
     height: 50px;
   }
   
   main {
     width: 100%;
-    display: block;
-    padding-bottom: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 50px;
+    margin-bottom: 50px;
   }
   
-  .step-box:last-child {
-    margin-bottom: 50px;
+  .step-box {
+    width: 90%;
+    justify-content: center;
+    align-items: center;
+    margin-right: 0px;
+    margin-bottom: 20px;
+  }
+  
+  .step-img1 {
+    height: 150px;
+  }
+  
+  .step-img2 {
+    height: 150px;
+  }
+  
+  .step-img3 {
+    height: 150px;
+  }
+  
+  footer {
+    height: 50px;
   }
 }
