--- a/mysite.css
+++ b/mysite.css
@@ -151,3 +151,90 @@ nav {
   background-size:cover;
   background-position:center;
 }
+
+#feature {
+  background-size: cover;
+  background-position: center;
+}
+
+.strength-group {
+  display: flex;
+  width: 980px;
+  padding: 30px 0 90px 0;
+  margin: 0 auto;
+}
+
+.strength {
+  width: 320px;
+  margin-right: 10px;
+  text-align: center;
+  font-size: 60px;
+}
+
+.fa {
+  display: inline-block;
+  font-size: inherit;
+  text-readering: auto;
+}
+
+.strength-title {
+  padding: 10px 0 ;
+  font-size: 20px;
+}
+
+.strength-text {
+  text-align: left;
+  font-size: 16px;
+}
+
+.profile-group {
+  display: flex;
+  padding: 30px 0 90px 0;
+}
+
+.left-content {
+  width: 50%;
+}
+
+.my-face {
+  width: 250px;
+  height: 250px;
+  margin:0 auto;
+  border-radius: 50%;
+  background-image: url(img/my-icon.jpg);
+}
+
+.right-content {
+  width: 50%;
+}
+
+.contact-group {
+  display: flex;
+  width: 800px;
+  padding: 30px 0 90px 0;
+  margin:0 auto;
+}
+
+.left-contact-content {
+  width: 130px;
+  margin: 0 auto;
+}
+
+.right-contact-content {
+  width: 170px;
+  margin: 0 auto;
+}
+
+.right-contact-content .fa {
+  font-size: 50px;
+  margin-right: 20px;
+}
+
+.right-contact-content .fa:last-child {
+  margin-right: 0;
+}
+
+/*.fa {*/
+/*  display: inline-block;*/
+/*  text-readering: auto;*/
+/*}*/
