--- a/mysite.css
+++ b/mysite.css
@@ -174,7 +174,7 @@ nav {
 .fa {
   display: inline-block;
   font-size: inherit;
-  text-readering: auto;
+  text-rendering: auto;
 }
 
 .strength-title {
@@ -234,7 +234,15 @@ nav {
   margin-right: 0;
 }
 
-/*.fa {*/
-/*  display: inline-block;*/
-/*  text-readering: auto;*/
-/*}*/
+footer {
+  width: 100%;
+  height: 60px;
+  background-color: #EC715F;
+  line-height: 60px;
+}
+
+.copyright {
+  font-size: 16px;
+  color: #FAFAFA;
+  text-align: center;
+}
